added change language in registrationpage.dart

--- a/client/lib/l10n/app_en.arb
+++ b/client/lib/l10n/app_en.arb
@@ -10,5 +10,13 @@
   "loginPage_description":"Login to SynapseChat",
   "loginPage_remeberMe":"Remember me",
   "loginPage_signUp":"Sign Up",
-  "loginPage_Login":"Login"
+  "loginPage_Login":"Login",
+
+
+  "registrationPage_title":"Registration",
+  "registrationPage_description":"Signup to SynapseChat",
+  "registrationPage_repeatPw":"Repeat Password",
+  "registrationPage_registration":"Register"
+
+
 }
