added spanish language and validation password and username

--- a/client/lib/l10n/app_es.arb
+++ b/client/lib/l10n/app_es.arb
@@ -1,82 +1,74 @@
 {
-    "homepageTitle": "¡Bienvenido a SynapseChat!",
-    "homepageDescription": "¡Bienvenido a SynapseChat!",
-    "homepageSelectLanguage": "¡Bienvenido a SynapseChat!",
-    "homepageContinue": "¡Bienvenido a SynapseChat!",
-    "homepageOptions": "¡Bienvenido a SynapseChat!",
+    "homepageTitle": "Bienvenido a SynapseChat",
+    "homepageDescription": "El servicio de mensajería más seguro del mundo",
+    "homepageSelectLanguage": "Selecciona el idioma",
+    "homepageContinue": "Continuar",
+    "homepageOptions": "Opciones",
 
-    "loginPageTitle": "Login",
-    "loginPageDescription": "Login to SynapseChat",
-    "loginPageRememberMe": "Remember me",
-    "loginPageSignUp": "Sign Up",
-    "loginPageLogin": "Login",
+    "loginPageTitle": "Acceso",
+    "loginPageDescription": "Accede a SynapseChat",
+    "loginPageRememberMe": "Recuérdame",
+    "loginPageSignUp": "Regístrate",
+    "loginPageLogin": "Acceder",
 
-    "registrationPageTitle": "Registrazione",
-    "registrationPageDescription": "Registrati a SynapseChat",
-    "registrationPageRepeatPw": "Ripeti Password",
-    "registrationPageRegistration": "Registrati",
+    "registrationPageTitle": "Registro",
+    "registrationPageDescription": "Regístrate en SynapseChat",
+    "registrationPageRepeatPw": "Repite la contraseña",
+    "registrationPageRegistration": "Registrarse",
 
+    "contentPageSelectChatText": "Selecciona un chat para comenzar a mensajear",
 
-    "contentPageSelectChatText":"Select a chat to start messaging",
+    "serverConnectPageTitle": "Conexión al servidor",
+    "serverConnectPageDescription": "Conéctate a un nuevo servidor",
+    "serverConnectPageIp": "IP del servidor",
+    "serverConnectPageConnect": "Conectar",
 
+    "settingsPageTitle": "Configuración",
+    "settingsPageUsername": "Nombre",
+    "settingsPageDescription": "Biografía",
+    "settingsPageChatSettings": "Configuración de chat",
+    "settingsPageLanguages": "Idioma",
+    "settingsPageCredits": "Créditos",
 
-    "serverConnectPageTitle": "Connessione al server",
-    "serverConnectPageDescription": "Connettiti ad un nuovo server",
-    "serverConnectPageIp": "IP del server",
-    "serverConnectPageConnect": "Connettiti",
+    "profilePageTitle": "Perfil",
+    "profilePageChangePicture": "Cambiar la imagen del perfil",
+    "profilePageName": "Nombre",
+    "profilePageDescriptionName": "Nombre visible para los contactos. \nNo está vinculado al nombre de usuario de inicio de sesión",
+    "profilePageBiography": "Biografía",
+    "profilePageDescriptionBiography": "Descríbete brevemente",
 
-    "settingsPageTitle": "Impostazioni",
-    "settingsPageUsername": "Nome",
-    "settingsPageDescription": "Biografia",
-    "settingsPageChatSettings": "Impostazioni chat",
-    "settingsPageLanguages": "Lingua",
-    "settingsPageCredits": "riconoscimenti",
+    "chatPreferencesTitle": "Configuración del chat",
+    "chatPreferencesFontSize": "Tamaño de fuente",
+    "chatPreferencesFirstText": "¡Hola!",
+    "chatPreferencesSecondText": "¡Hola! ¿Cómo estás?",
+    "chatPreferencesThirdText": "Estoy bien, gracias. ¿Y tú?",
+    "chatPreferencesBackground": "Cambiar el color de fondo",
+    "chatPreferencesTextDialogBackground": "Elige el color de fondo",
+    "chatPreferencesTextColor": "Cambiar el color del texto",
+    "chatPreferencesTextDialogColor": "Elige el color del texto",
+    "chatPreferencesLightTheme": "Tema claro",
+    "chatPreferencesDarkTheme": "Tema oscuro",
 
+    "languagesPageTitle": "Idiomas",
 
-    "profilePageTitle": "Profilo",
-    "profilePageChangePicture": "Cambia l'immagine profilo",
-    "profilePageName": "Nome",
-    "profilePageDescriptionName": "Questo è il nome che vedranno i tuoi contatti \nNon è correlata con lo username per il login",
-    "profilePageBiography": "Biografia",
-    "profilePageDescriptionBiography": "Descriviti brevemente",
+    "creditsPageTitle": "Créditos",
+    "creditsPageDescription": "Créditos",
+    "creditsPageDeveloperCreditsButton": "Créditos de Desarrolladores",
+    "creditsPageIconsCreditsButton": "Créditos de Iconos",
 
+    "developerscreditsPageTitle": "Créditos de Desarrolladores",
+    "developerscreditsPageDescriptionAlBovo": "Desarrollo del servidor",
+    "developerscreditsPageDescriptionMark74": "Desarrollo frontend y backend del cliente",
+    "developerscreditsPageDescriptionMattiaCincotta": "Desarrollo frontend",
+    "developerscreditsPageDescriptionLorii0": "Desarrollo frontend",
+    "developerscreditsPageDescriptionAntostarwars": "Desarrollo frontend y backend del cliente",
 
-    "chatPreferencesTitle": "Impostazioni Chat",
-    "chatPreferencesFontSize": "Grandezza Caratteri",
-    "chatPreferencesFirstText": "Ciao!",
-    "chatPreferencesSecondText": "Ciao! Come stai?",
-    "chatPreferencesThirdText": "Sto bene, grazie! E tu?",
-    "chatPreferencesBackground": "Cambia il colore dello sfondo",
-    "chatPreferencesTextColor": "Cambia il colore dei caratteri",
-    "chatPreferencesLightTheme": "Tema chiaro",
-    "chatPreferencesLightTheme": "Tema scuro",
-
-
-    "languagesPageTitle": "Languages",
-
-
-    "creditsPageTitle": "Crediti",
-    "creditsPageDescription": "Crediti",
-    "creditsPageDeveloperCreditsButton": "Crediti Sviluppatori",
-    "creditsPageIconsCreditsButton": "Crediti Icone",
-
-
-    "developerscreditsPageTitle": "Developers Credits",
-    "developerscreditsPageDescriptionAlBovo": "Server-side development",
-    "developerscreditsPageDescriptionMark74": "Frontend and client-side backend development",
-    "developerscreditsPageDescriptionMattiaCincotta": "Frontend development",
-    "developerscreditsPageDescriptionLorii0": "Frontend development",
-    "developerscreditsPageDescriptionAntostarwars": "Frontend and client-side backend development",
-
-
-    "iconscreditsPageTitle":"Icons Credits",
-    "iconscreditsPageInfoIcon":"  Info icon created by Anggara - Flaticon",
-    "iconscreditsPageMessageIcon":"   Message icon created by Fathema Khanom - Flaticon",
-    "iconscreditsPageGalleryIcon":"   Gallery icon created by adrianadam - Flaticon",
-    "iconscreditsPageAddDatabaseIcon":"   Add database icon created by Arafat Uddin - Flaticon",
-    "iconscreditsPageProfileImageIcon":"   Profile image icon created by Md Tanvirul Haque - Flaticon",
-    "iconscreditsPageUserIcon":"   User icons created by Freepik - Flaticon",
-    "iconscreditsPageEarthGlobeIcon":"   Earth globe icon created by Freepik - Flaticon"
-
-
+    "iconscreditsPageTitle": "Créditos de Iconos",
+    "iconscreditsPageInfoIcon": "Icono de información creado por Anggara - Flaticon",
+    "iconscreditsPageMessageIcon": "Icono de mensaje creado por Fathema Khanom - Flaticon",
+    "iconscreditsPageGalleryIcon": "Icono de galería creado por adrianadam - Flaticon",
+    "iconscreditsPageAddDatabaseIcon": "Icono de añadir base de datos creado por Arafat Uddin - Flaticon",
+    "iconscreditsPageProfileImageIcon": "Icono de imagen de perfil creado por Md Tanvirul Haque - Flaticon",
+    "iconscreditsPageUserIcon": "Iconos de usuario creados por Freepik - Flaticon",
+    "iconscreditsPageEarthGlobeIcon": "Icono de globo terráqueo creado por Freepik - Flaticon"
 }
