added graphics in chatpage.dart

--- a/client/lib/l10n/app_en.arb
+++ b/client/lib/l10n/app_en.arb
@@ -84,7 +84,10 @@
   "iconscreditsPageAddDatabaseIcon":"   Add database icon created by Arafat Uddin - Flaticon",
   "iconscreditsPageProfileImageIcon":"   Profile image icon created by Md Tanvirul Haque - Flaticon",
   "iconscreditsPageUserIcon":"   User icons created by Freepik - Flaticon",
-  "iconscreditsPageEarthGlobeIcon":"   Earth globe icon created by Freepik - Flaticon"
+  "iconscreditsPageEarthGlobeIcon":"   Earth globe icon created by Freepik - Flaticon",
+
+
+  "contentPageTextbar":"Type a message"
 
 
 }
