--- a/client/lib/l10n/app_es.arb
+++ b/client/lib/l10n/app_es.arb
@@ -27,7 +27,15 @@
     "serverConnectPageTitle": "Conexión al servidor",
     "serverConnectPageDescription": "Conéctate a un nuevo servidor",
     "serverConnectPageIp": "IP del servidor",
+    "serverConnectPagePort": "Puerto",
     "serverConnectPageConnect": "Conectar",
+    "serverConnectPageFirstStringAuthenticatorPopUp": "Añadir TOTP a tu Authenticator",
+    "serverConnectPageSecondStringAuthenticatorPopUp": "Escanea el código QR con tu Authenticator",
+    "serverConnectPageThirdStringAuthenticatorPopUp": "o",
+    "serverConnectPageFourthStringAuthenticatorPopUp": "Añadir a Google Authenticator",
+    "serverConnectPageTitleErrorConnectionPopUp": "Error de Conexión",
+    "serverConnectPageContentErrorConnectionPopUp": "La dirección IP, la contraseña o el puerto podrían ser incorrectos",
+    "serverConnectPageButtonErrorConnectionPopUp": "Intentar de Nuevo",
 
     "settingsPageTitle": "Configuración",
     "settingsPageUsername": "Nombre",
