--- a/client/lib/l10n/app_it.arb
+++ b/client/lib/l10n/app_it.arb
@@ -29,7 +29,15 @@
     "serverConnectPageTitle": "Connessione al server",
     "serverConnectPageDescription": "Connettiti ad un nuovo server",
     "serverConnectPageIp": "IP del server",
+    "serverConnectPagePort": "Porta",
     "serverConnectPageConnect": "Connettiti",
+    "serverConnectPageFirstStringAuthenticatorPopUp": "Aggiungi TOTP al tuo Authenticator",
+    "serverConnectPageSecondStringAuthenticatorPopUp": "Scansiona il codice QR con il tuo Authenticator",
+    "serverConnectPageThirdStringAuthenticatorPopUp": "oppure",
+    "serverConnectPageFourthStringAuthenticatorPopUp": "Aggiungi a Google Authenticator",
+    "serverConnectPageTitleErrorConnectionPopUp": "Errore di Connessione",
+    "serverConnectPageContentErrorConnectionPopUp": "L'indirizzo IP, la password o la porta potrebbero essere errati",
+    "serverConnectPageButtonErrorConnectionPopUp": "Riprova",
 
     "settingsPageTitle": "Impostazioni",
     "settingsPageUsername": "Nome",
